@@ -1,3 +1,10 @@
+2007-03-05  Paul Lindner  <lindner@inuus.com>
+	* Avoid type-punning.  Do a more efficient realloc inside the
+	  conn_shrink routine.
+
+        * Fix overflow bug where uninitialized access to slabclass caused
+	  size-0 mallocs during slab preallocation.
+
 2007-03-05
 	* Steven Grimm <sgrimm@facebook.com>: Per-object-type stats collection
 	  support. Specify the object type delimiter with the -D command line
